--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ axum = "0.8.3"
 tokio = { version = "1.44.2", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite", "macros", "tls-rustls"] }
 
 [dev-dependencies]
 httpc-test = "0.1.10"
