--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = "1"
 sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite", "macros", "tls-rustls", "chrono"] }
 chrono = "0.4"
 async-trait = "0.1"
+clap = { version = "4.5.37", features = ["derive"] }
 
 [dev-dependencies]
 httpc-test = "0.1.10"
